--- a/sql-grader/frontend/src/index.css
+++ b/sql-grader/frontend/src/index.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: black;
-	background-color: #f5f5f5;
+	background-color: #fbfbfb;
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
